- fix check fo 0p resolution
- force http to be generated in STRM files if absent in host variable
- make a change to forking logic
v0.1.12 (2018-03-21)
- change emby strm file creation from [#p].strm to - #p.strm
- ensure all team drives are fetched (fix pagination)
- add missing delete method
v0.1.11 (2018-03-19)
- implement: Error in last release 0.1.10 #43
- fix for DBM fetching of change token (moved out of buildstrm method)
- resolve deadlock issue with scheduler updating change tracking numbers
- activate the scheduler
- fix gplayer .play missing error
- fix for default.py in STRM folder creation
v0.1.10 (2018-03-14)
- implement: select stream quality #17
- implement: Add support for specifying transcode type in URL #29
- fix preferred quality matching for transcoding
- add debug mode
v0.1.9 (2018-03-13)
- STRM cleanup
- fix for ensuring default host is used in STRM creation
- add scheduler log and server console logging options; redirect output to logging routine
- fix for enroll bug when accounts >= 10
- get rid of DBM for scheduler
- add STRM logging method (optional)
- add context items to team drive entries (treat them like folders)
- STRM building - add force parameter (to force overwrite)
- STRM building - add 'resolution' parameter to append resolution to STRM filename
- make correction for checking if STRM file exists already
- workaround issue - buildstrm folders not working #40
v0.1.8 (2018-02-21)
- implement: Support to SSL certificates (HTTPS) #39
- add saltpassword instead of using username
- combine buildstrm and buildstrm2 into one method
- fix for when user removes username/password
- setting interface password fix
- fix for blanking out setting parameters
- add slideshow to + options
- fix passthrough, force never_stream = true
- add passthrough to settings pane
- if passthrough = true, set never_stream = false
v0.1.7 (2017-12-28)
- fix reload to reload user settings
- fix port issue in listing